--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "docker-compose -f docker-compose.yml up -d",
     "stop": "docker-compose -f docker-compose.yml down || true",
-    "build": "docker build -f Dockerfile -t sabaicode/bigdata_hadoop:latest .",
-    "console": "docker-compose exec -u sabaicode app bash"
+    "build:base": "docker build -f docker/base/Dockerfile -t sabaicode/hadoop_base:latest .",
+    "build:namenode": "docker build -f docker/namenode/Dockerfile -t sabaicode/hadoop_namenode:latest .",
+    "build:datanode": "docker build -f docker/datanode/Dockerfile -t sabaicode/hadoop_datanode:latest .",
+    "clear-container": "docker rm -f $(docker ps -a -q)",
+    "console": "docker-compose exec -u sabaicode hadoop bash"
   },
   "author": "",
   "license": "ISC"
