--- a/docker/namenode/Dockerfile
+++ b/docker/namenode/Dockerfile
@@ -1,4 +1,6 @@
 FROM sabaicode/hadoop_base:latest
+
+EXPOSE 9870 50070
 RUN mkdir -p /opt/hadoop/data/namenode
 RUN ./bin/hdfs namenode -format
 CMD [ "hdfs", "namenode" ]
