--- a/docker/namenode/Dockerfile
+++ b/docker/namenode/Dockerfile
@@ -2,5 +2,5 @@ FROM sabaicode/hadoop_base:latest
 
 EXPOSE 9870 50070
 RUN mkdir -p /opt/hadoop/data/namenode
-RUN ./bin/hdfs namenode -format
+# RUN ./bin/hdfs namenode -format -force
 CMD [ "hdfs", "namenode" ]
