--- a/docker/namenode/Dockerfile
+++ b/docker/namenode/Dockerfile
@@ -4,3 +4,4 @@ EXPOSE 9870 50070
 RUN mkdir -p /opt/hadoop/data/namenode
 # RUN ./bin/hdfs namenode -format -force
 CMD [ "hdfs", "namenode" ]
+# CMD [ "tail", "-f", "/dev/null" ]
