--- a/config/flume/twitter.conf
+++ b/config/flume/twitter.conf
@@ -1,3 +1,5 @@
+config.filter.class = org.apache.flume.configfilter.EnvironmentVariableConfigFilter
+
 # Naming the components
 TwitterAgent.sources = Twitter
 TwitterAgent.channels = MemChannel
@@ -5,11 +7,18 @@ TwitterAgent.sinks = HDFS
 
 # Describing/Configuring the source
 TwitterAgent.sources.Twitter.type = org.apache.flume.source.twitter.TwitterSource
-TwitterAgent.sources.Twitter.consumerKey = GVul68Fo66b6AUx3kLzfC6PyU
-TwitterAgent.sources.Twitter.consumerSecret = gRj3TbUfIeUFVJLU07sswkJiCIfbpgdWozhdCQtvorLCqNMzES
-TwitterAgent.sources.Twitter.accessToken = 14469121-XecFWodTSZ8SRgP5iRlDVVAkvxgYkbDDbPJ1sIZ4L 
-TwitterAgent.sources.Twitter.accessTokenSecret = YRP8hQqh8JBV7WSaK9CYXKBF596emdyiQvJWYMxzhrEHj 
+TwitterAgent.sources.Twitter.consumerKey = X1NhdjhUY3FfWE5IV3N0VElhY3o6MTpjaQ
+TwitterAgent.sources.Twitter.consumerSecret = 0nhzDuQoqaZJyEnRZr53LB2RlxJIrTUHN30yfythhnGNQpuATA
+TwitterAgent.sources.Twitter.accessToken = 14469121-ttGM6cnFpGmiRrZKU8AMdRWsqrRWEeMliLZLNyGpA
+TwitterAgent.sources.Twitter.accessTokenSecret = 2XAUhxV0dzn7uusIpHfSK6aIrDN3EOoPeDU0mfL4LyhC3
+TwitterAgent.sources.twitterSrc.endpoint= https://api.twitter.com/2/tweets/search/stream?
+# TwitterAgent.sources.twitter.configfilters = myFilter
+# TwitterAgent.configfilters.myFilter.type = regex_filter
+# TwitterAgentagent1.configfilters.myFilter.regex = #
+# TwitterAgent.configfilters.myFilter.replacement =
+
 TwitterAgent.sources.Twitter.keywords = tutorials point,java, bigdata, mapreduce, mahout, hbase, nosql
+TwitterAgent.sources.Twitter.handler = org.apache.flume.source.http.JSONHandler
 
 # Describing/Configuring the sink
 TwitterAgent.sinks.HDFS.type = hdfs
