--- a/docker/namenode/Dockerfile
+++ b/docker/namenode/Dockerfile
@@ -2,6 +2,8 @@ FROM sabaicode/hadoop_base:latest
 
 EXPOSE 9870 50070
 RUN mkdir -p /opt/hadoop/data/namenode
-# RUN ./bin/hdfs namenode -format -force
-CMD [ "hdfs", "namenode" ]
+
+ADD start.sh /start.sh
+RUN chmod a+x /start.sh
+CMD [ "./start.sh"]
 # CMD [ "tail", "-f", "/dev/null" ]
