--- a/docker/namenode/Dockerfile
+++ b/docker/namenode/Dockerfile
@@ -3,7 +3,9 @@ FROM sabaicode/hadoop_base:latest
 EXPOSE 9870 50070
 RUN mkdir -p /opt/hadoop/data/namenode
 
-ADD start.sh /start.sh
+ADD docker/namenode/start.sh /start.sh
+ADD docker/namenode/fence.sh /fence.sh
+RUN chmod a+x /fence.sh
 RUN chmod a+x /start.sh
 CMD [ "./start.sh"]
 # CMD [ "tail", "-f", "/dev/null" ]
